KYLIN-1219 support SSO with Spring SAML

--- a/examples/test_case_data/localmeta/kylin.properties
+++ b/examples/test_case_data/localmeta/kylin.properties
@@ -40,7 +40,7 @@ kylin.job.yarn.app.rest.check.interval.seconds=10
 kylin.hbase.default.compression.codec=gzip
 
 
-
+kylin.security.profile=testing
 ## Config for Restful APP ##
 # database connection settings:
 ldap.server=
@@ -57,7 +57,5 @@ acl.defaultRole=
 ganglia.group=
 ganglia.port=8664
 
-###########################config info for sandbox#######################
-kylin.sandbox=true
 
 
