--- a/examples/test_case_data/sandbox/kylin.properties
+++ b/examples/test_case_data/sandbox/kylin.properties
@@ -51,6 +51,8 @@ kylin.job.yarn.app.rest.check.interval.seconds=10
 #default compression codec for htable,snappy,lzo,gzip,lz4
 kylin.hbase.default.compression.codec=gzip
 
+kylin.security.profile=testing
+
 ## Config for Restful APP ##
 # database connection settings:
 ldap.server=
@@ -96,6 +98,4 @@ kylin.web.contact_mail=
 #env DEV|QA|PROD
 deploy.env=DEV
 
-###########################config info for sandbox#######################
-kylin.sandbox=true
 
