--- a/server/src/main/resources/kylin-server-log4j.properties
+++ b/server/src/main/resources/kylin-server-log4j.properties
@@ -49,3 +49,8 @@ log4j.logger.org.apache.kylin.query=DEBUG, query
 log4j.logger.org.apache.kylin.rest.controller.JobController=DEBUG, job
 log4j.logger.org.apache.kylin.rest.service.JobService=DEBUG, job
 log4j.logger.org.apache.kylin.job=DEBUG, job
+
+#spring security config
+log4j.logger.org.springframework.security=INFO,file
+log4j.logger.org.opensaml=INFO,file
+log4j.logger.PROTOCOL_MESSAGE=INFO,file
