--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
     <packaging>pom</packaging>
     <version>2.0-incubating-SNAPSHOT</version>
     <name>Kylin:HadoopOLAPEngine</name>
-    <url>http://kylin.incubator.apache.org</url>
+    <url>http://kylin.apache.org</url>
     <inceptionYear>2014</inceptionYear>
 
 
@@ -134,38 +134,38 @@
     <mailingLists>
         <mailingList>
             <name>kylin-user</name>
-            <subscribe>user-subscribe@kylin.incubator.apache.org</subscribe>
-            <unsubscribe>user-unsubscribe@kylin.incubator.apache.org</unsubscribe>
-            <post>user@kylin.incubator.apache.org</post>
+            <subscribe>user-subscribe@kylin.apache.org</subscribe>
+            <unsubscribe>user-unsubscribe@kylin.apache.org</unsubscribe>
+            <post>user@kylin.apache.org</post>
             <archive>http://mail-archives.apache.org/mod_mbox/kylin-user/</archive>
         </mailingList>
         <mailingList>
             <name>kylin-dev</name>
-            <subscribe>dev-subscribe@kylin.incubator.apache.org</subscribe>
-            <unsubscribe>dev-unsubscribe@kylin.incubator.apache.org</unsubscribe>
-            <post>dev@kylin.incubator.apache.org</post>
+            <subscribe>dev-subscribe@kylin.apache.org</subscribe>
+            <unsubscribe>dev-unsubscribe@kylin.apache.org</unsubscribe>
+            <post>dev@kylin.apache.org</post>
             <archive>http://mail-archives.apache.org/mod_mbox/kylin-dev/</archive>
         </mailingList>
         <mailingList>
             <name>kylin-issues</name>
-            <subscribe>issues-subscribe@kylin.incubator.apache.org</subscribe>
-            <unsubscribe>issues-unsubscribe@kylin.incubator.apache.org</unsubscribe>
-            <post>issues@kylin.incubator.apache.org</post>
+            <subscribe>issues-subscribe@kylin.apache.org</subscribe>
+            <unsubscribe>issues-unsubscribe@kylin.apache.org</unsubscribe>
+            <post>issues@kylin.apache.org</post>
             <archive>http://mail-archives.apache.org/mod_mbox/kylin-issues/</archive>
         </mailingList>
         <mailingList>
             <name>kylin-commits</name>
-            <subscribe>commits-subscribe@kylin.incubator.apache.org</subscribe>
-            <unsubscribe>commits-unsubscribe@kylin.incubator.apache.org</unsubscribe>
-            <post>commits@kylin.incubator.apache.org</post>
+            <subscribe>commits-subscribe@kylin.apache.org</subscribe>
+            <unsubscribe>commits-unsubscribe@kylin.apache.org</unsubscribe>
+            <post>commits@kylin.apache.org</post>
             <archive>http://mail-archives.apache.org/mod_mbox/kylin-commits/</archive>
         </mailingList>
     </mailingLists>
 
     <scm>
-        <connection>scm:git:https://git-wip-us.apache.org/repos/asf/incubator-kylin.git</connection>
-        <developerConnection>scm:git:https://git-wip-us.apache.org/repos/asf/incubator-kylin.git</developerConnection>
-        <url>https://git-wip-us.apache.org/repos/asf/incubator-kylin.git</url>
+        <connection>scm:git:https://git-wip-us.apache.org/repos/asf/kylin.git</connection>
+        <developerConnection>scm:git:https://git-wip-us.apache.org/repos/asf/kylin.git</developerConnection>
+        <url>https://git-wip-us.apache.org/repos/asf/kylin.git</url>
         <tag>apache-kylin-2.0-incubating</tag>
     </scm>
 
