--- a/pom.xml
+++ b/pom.xml
@@ -142,7 +142,7 @@
         <connection>scm:git:https://git-wip-us.apache.org/repos/asf/kylin.git</connection>
         <developerConnection>scm:git:https://git-wip-us.apache.org/repos/asf/kylin.git</developerConnection>
         <url>https://git-wip-us.apache.org/repos/asf/kylin.git</url>
-        <tag>kylin-1.1.1-incubating</tag>
+        <tag>kylin-1.2</tag>
     </scm>
 
     <dependencyManagement>
