KYLIN-1239 attribute each htable with team contact and owner name

--- a/examples/test_case_data/localmeta/kylin.properties
+++ b/examples/test_case_data/localmeta/kylin.properties
@@ -1,5 +1,10 @@
 ## Config for Kylin Engine ##
 
+
+# optional information for the owner of kylin platform, it can be your team's email
+# currently it will be attached to each kylin's htable attribute
+kylin.owner=whoami@kylin.apache.org
+
 # List of web servers in use, this enables one web server instance to sync up with other servers.
 #kylin.rest.servers=localhost:7070
 
