--- a/examples/test_case_data/sandbox/kylin.properties
+++ b/examples/test_case_data/sandbox/kylin.properties
@@ -1,5 +1,9 @@
 ## Config for Kylin Engine ##
 
+# optional information for the owner of kylin platform, it can be your team's email
+# currently it will be attached to each kylin's htable attribute
+kylin.owner=whoami@kylin.apache.org
+
 # List of web servers in use, this enables one web server instance to sync up with other servers.
 kylin.rest.servers=localhost:7070
 
@@ -8,6 +12,7 @@ kylin.metadata.url=kylin_metadata@hbase
 
 # The storage for final cube file in hbase
 kylin.storage.url=hbase
+
 
 # Temp folder in hdfs, make sure user has the right access to the hdfs directory
 kylin.hdfs.working.dir=/kylin
