--- a/conf/kylin.properties
+++ b/conf/kylin.properties
@@ -80,6 +80,9 @@ kylin.hbase.region.cut.large=100
 kylin.hbase.region.count.min=1
 kylin.hbase.region.count.max=500
 
+# Enable/disable ACL check for cube query
+kylin.query.security.enabled=true
+
 ## Config for Restful APP ##
 # database connection settings:
 ldap.server=
