add excel and powerbi tutorial, thanks to Dong Li who drafted the raw version

--- a/website/_data/docs.yml
+++ b/website/_data/docs.yml
@@ -40,6 +40,8 @@
   - tutorial/acl
   - tutorial/web
   - tutorial/tableau
+  - tutorial/tableau_91
+  - tutorial/powerbi
   - tutorial/odbc
 
 - title: How To
