KYLIN-1245 Set 'random' algorithm for testing

--- a/examples/test_case_data/sandbox/kylin.properties
+++ b/examples/test_case_data/sandbox/kylin.properties
@@ -53,8 +53,11 @@ kylin.hbase.region.cut.large=100
 # Time interval to check hadoop job status
 kylin.job.yarn.app.rest.check.interval.seconds=10
 
-#default compression codec for htable,snappy,lzo,gzip,lz4
+# Default compression codec for htable,snappy,lzo,gzip,lz4
 kylin.hbase.default.compression.codec=gzip
+
+# 'auto', 'inmem', 'layer' or 'random' for testing
+kylin.cube.algorithm=random
 
 kylin.security.profile=testing
 
