--- a/core-common/pom.xml
+++ b/core-common/pom.xml
@@ -69,6 +69,10 @@
             <artifactId>commons-httpclient</artifactId>
         </dependency>
         <dependency>
+	        <groupId>org.apache.httpcomponents</groupId>
+	        <artifactId>httpclient</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
