--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,7 @@
         <jetty.version>9.2.7.v20150116</jetty.version>
         <kryo.version>3.0.3</kryo.version>
         <ehcache.version>2.8.1</ehcache.version>
+        <apache-httpclient.version>4.5</apache-httpclient.version>
 
         <!-- REST Service -->
         <spring.framework.version>3.1.2.RELEASE</spring.framework.version>
@@ -456,6 +457,11 @@
                 <artifactId>curator-recipes</artifactId>
                 <version>${curator.version}</version>
             </dependency>
+      		<dependency>	
+      			<groupId>org.apache.httpcomponents</groupId>
+	           	<artifactId>httpclient</artifactId>
+ 	          	<version>${apache-httpclient.version}</version>
+ 	     	</dependency>
 
         </dependencies>
     </dependencyManagement>
