getting mr job status with kerberos authentication

--- a/core-common/pom.xml
+++ b/core-common/pom.xml
@@ -78,6 +78,10 @@
             <artifactId>commons-httpclient</artifactId>
         </dependency>
         <dependency>
+	        <groupId>org.apache.httpcomponents</groupId>
+	        <artifactId>httpclient</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
