--- a/server/pom.xml
+++ b/server/pom.xml
@@ -121,6 +121,11 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.thetransactioncompany</groupId>
+            <artifactId>cors-filter</artifactId>
+            <version>1.3.2</version>
+        </dependency>
 
         <dependency>
             <groupId>log4j</groupId>
