--- a/server/src/main/resources/kylin-server-log4j.properties
+++ b/server/src/main/resources/kylin-server-log4j.properties
@@ -18,19 +18,19 @@
 #define appenders
 log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.File=${catalina.home}/logs/kylin.log
+log4j.appender.file.File=${catalina.home}/../logs/kylin.log
 log4j.appender.file.layout.ConversionPattern=[%t]:[%d{yyyy-MM-dd HH:mm:ss,SSS}][%p][%l] - %m%n
 log4j.appender.file.Append=true
 
 log4j.appender.query=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.query.layout=org.apache.log4j.PatternLayout
-log4j.appender.query.File=${catalina.home}/logs/kylin_query.log
+log4j.appender.query.File=${catalina.home}/../logs/kylin_query.log
 log4j.appender.query.layout.ConversionPattern=[%t]:[%d{yyyy-MM-dd HH:mm:ss,SSS}][%p][%l] - %m%n
 log4j.appender.query.Append=true
 
 log4j.appender.job=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.job.layout=org.apache.log4j.PatternLayout
-log4j.appender.job.File=${catalina.home}/logs/kylin_job.log
+log4j.appender.job.File=${catalina.home}/../logs/kylin_job.log
 log4j.appender.job.layout.ConversionPattern=[%t]:[%d{yyyy-MM-dd HH:mm:ss,SSS}][%p][%l] - %m%n
 log4j.appender.job.Append=true
 
@@ -38,6 +38,7 @@ log4j.appender.job.Append=true
 log4j.rootLogger=INFO,file
 log4j.logger.org.apache.kylin=DEBUG
 log4j.logger.org.springframework=WARN
+log4j.logger.org.springframework.security=INFO
 
 #query config
 log4j.logger.org.apache.kylin.rest.controller.QueryController=DEBUG, query
@@ -49,8 +50,3 @@ log4j.logger.org.apache.kylin.query=DEBUG, query
 log4j.logger.org.apache.kylin.rest.controller.JobController=DEBUG, job
 log4j.logger.org.apache.kylin.rest.service.JobService=DEBUG, job
 log4j.logger.org.apache.kylin.job=DEBUG, job
-
-#spring security config
-log4j.logger.org.springframework.security=INFO,file
-log4j.logger.org.opensaml=INFO,file
-log4j.logger.PROTOCOL_MESSAGE=INFO,file
