--- a/server/src/main/resources/kylin-server-log4j.properties
+++ b/server/src/main/resources/kylin-server-log4j.properties
@@ -15,23 +15,24 @@
 # limitations under the License.
 #
 
+
 #define appenders
 log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.File=${catalina.home}/../logs/kylin.log
-log4j.appender.file.layout.ConversionPattern=[%t]:[%d{yyyy-MM-dd HH:mm:ss,SSS}][%p][%l] - %m%n
+log4j.appender.file.layout.ConversionPattern=%d{ISO8601} %-5p [%t] %c{2}:%L : %m%n
 log4j.appender.file.Append=true
 
 log4j.appender.query=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.query.layout=org.apache.log4j.PatternLayout
 log4j.appender.query.File=${catalina.home}/../logs/kylin_query.log
-log4j.appender.query.layout.ConversionPattern=[%t]:[%d{yyyy-MM-dd HH:mm:ss,SSS}][%p][%l] - %m%n
+log4j.appender.query.layout.ConversionPattern=%d{ISO8601} %-5p [%t] %c{2}:%L : %m%n
 log4j.appender.query.Append=true
 
 log4j.appender.job=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.job.layout=org.apache.log4j.PatternLayout
 log4j.appender.job.File=${catalina.home}/../logs/kylin_job.log
-log4j.appender.job.layout.ConversionPattern=[%t]:[%d{yyyy-MM-dd HH:mm:ss,SSS}][%p][%l] - %m%n
+log4j.appender.job.layout.ConversionPattern=%d{ISO8601} %-5p [%t] %c{2}:%L : %m%n
 log4j.appender.job.Append=true
 
 #overall config
