--- a/examples/test_case_data/sandbox/kylin.properties
+++ b/examples/test_case_data/sandbox/kylin.properties
@@ -24,6 +24,9 @@ kylin.owner=whoami@kylin.apache.org
 # List of web servers in use, this enables one web server instance to sync up with other servers.
 kylin.rest.servers=localhost:7070
 
+#set display timezone on UI,format like[GMT+N or GMT-N]
+kylin.rest.timezone=GMT-9
+
 # The metadata store in hbase
 kylin.metadata.url=kylin_metadata@hbase
 
