--- a/webapp/bower.json
+++ b/webapp/bower.json
@@ -3,7 +3,7 @@
   "version": "0.7.1",
   "dependencies": {
     "angular-bootstrap": "0.10.0",
-    "angular": "1.2.15",
+    "angular": "1.2.29",
     "angular-resource": "~1.3.12",
     "angular-route": "1.2.15",
     "ng-grid": "2.0.11",
@@ -28,14 +28,16 @@
     "fuelux": "~3.5.1",
     "angular-animate": "1.2",
     "angular-cookies": "1.2",
-    "angular-busy": "~4.0"
+    "angular-busy": "~4.0",
+    "angular-ui-select": "0.13.2",
+    "angular-sanitize": "1.2.18"
   },
   "devDependencies": {
     "less.js": "~1.4.0",
     "angular-mocks-unstable": "~1.1.5"
   },
   "resolutions": {
-    "angular": "1.2.15",
+    "angular": "1.2.29",
     "nvd3": "1.1.15-beta",
     "d3": "3.4.4",
     "moment": "2.4.0",
