--- a/website/_data/docs.yml
+++ b/website/_data/docs.yml
@@ -22,6 +22,7 @@
   - gettingstarted/faq
   - gettingstarted/events
   - gettingstarted/terminology
+  - gettingstarted/concepts
 
 - title: Installation
   docs:
