--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,7 @@
         <kryo.version>3.0.3</kryo.version>
         <ehcache.version>2.8.1</ehcache.version>
         <apache-httpclient.version>4.5</apache-httpclient.version>
+        <roaring.version>(0.5.4,]</roaring.version>
 
         <!-- REST Service -->
         <spring.framework.version>3.1.2.RELEASE</spring.framework.version>
@@ -457,11 +458,17 @@
                 <artifactId>curator-recipes</artifactId>
                 <version>${curator.version}</version>
             </dependency>
-      		<dependency>	
-      			<groupId>org.apache.httpcomponents</groupId>
-	           	<artifactId>httpclient</artifactId>
- 	          	<version>${apache-httpclient.version}</version>
- 	     	</dependency>
+      	  	<dependency>
+      	    		<groupId>org.apache.httpcomponents</groupId>
+	              <artifactId>httpclient</artifactId>
+ 	          	  <version>${apache-httpclient.version}</version>
+ 	     	    </dependency>
+
+            <dependency>
+                <groupId>org.roaringbitmap</groupId>
+                <artifactId>RoaringBitmap</artifactId>
+                <version>${roaring.version}</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
