--- a/storage-hbase/pom.xml
+++ b/storage-hbase/pom.xml
@@ -139,6 +139,7 @@
                                     <include>org.apache.kylin:kylin-invertedindex</include>
                                     <include>com.ning:compress-lzf</include>
                                     <include>com.n3twork.druid:extendedset</include>
+                                    <include>org.roaringbitmap:RoaringBitmap</include>
                                 </includes>
                             </artifactSet>
                             <filters>
