--- a/website/_data/development.yml
+++ b/website/_data/development.yml
@@ -20,11 +20,11 @@
   dev:
   - index
   - dev_env
+  - howto_test
   - howto_contribute
   - howto_docs
   - howto_package
   - howto_release
   - new_metadata
   - web_tech
-  - test_minicluster
   - about_temp_files
