--- a/job/pom.xml
+++ b/job/pom.xml
@@ -41,7 +41,18 @@
             <scope>test</scope>
             <version>${project.parent.version}</version>
         </dependency>
+        <!-- ES dependencies -->
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch</artifactId>
+        </dependency>
 
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch</artifactId>
+            <scope>test</scope>
+            <type>test-jar</type>
+        </dependency>
         <!--Kylin Jar -->
         <dependency>
             <groupId>org.apache.kylin</groupId>
