add a new storage of elasticsearch

--- a/conf/kylin.properties
+++ b/conf/kylin.properties
@@ -26,6 +26,9 @@ kylin.rest.timezone=GMT-8
 # The metadata store in hbase
 kylin.metadata.url=kylin_metadata@hbase
 
+# The url of elasticsearch
+kylin.es.cluster.url=127.0.0.1:9300@clusterA
+
 # The storage for final cube file in hbase
 kylin.storage.url=hbase
 
