--- a/common/pom.xml
+++ b/common/pom.xml
@@ -101,6 +101,19 @@
             <artifactId>hbase-server</artifactId>
             <scope>provided</scope>
         </dependency>
+
+        <!-- ES dependencies -->
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch</artifactId>
+            <scope>test</scope>
+            <type>test-jar</type>
+        </dependency>
         <dependency>
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-testing-util</artifactId>
