--- a/core-metadata/pom.xml
+++ b/core-metadata/pom.xml
@@ -50,11 +50,7 @@
         <dependency>
             <groupId>org.roaringbitmap</groupId>
             <artifactId>RoaringBitmap</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-common</artifactId>
+            <version>${roaring.version}</version>
         </dependency>
 
         <!-- Env & Test -->
