--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -5,7 +5,8 @@
     <parent>
         <artifactId>kylin</artifactId>
         <groupId>org.apache.kylin</groupId>
-        <version>2.0-incubating-SNAPSHOT</version>
+        <version>2.1-SNAPSHOT</version>
+
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
