--- a/core-cube/pom.xml
+++ b/core-cube/pom.xml
@@ -27,7 +27,8 @@
     <parent>
         <groupId>org.apache.kylin</groupId>
         <artifactId>kylin</artifactId>
-        <version>2.0-incubating-SNAPSHOT</version>
+        <version>2.1-SNAPSHOT</version>
+
     </parent>
 
     <dependencies>
