--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,8 @@
     <groupId>org.apache.kylin</groupId>
     <artifactId>kylin</artifactId>
     <packaging>pom</packaging>
-    <version>2.0-incubating-SNAPSHOT</version>
+    <version>2.1-SNAPSHOT</version>
+
     <name>Kylin:HadoopOLAPEngine</name>
     <url>http://kylin.apache.org</url>
     <inceptionYear>2014</inceptionYear>
