--- a/pom.xml
+++ b/pom.xml
@@ -168,7 +168,7 @@
         <connection>scm:git:https://git-wip-us.apache.org/repos/asf/kylin.git</connection>
         <developerConnection>scm:git:https://git-wip-us.apache.org/repos/asf/kylin.git</developerConnection>
         <url>https://git-wip-us.apache.org/repos/asf/kylin.git</url>
-        <tag>apache-kylin-2.0-incubating</tag>
+        <tag>apache-kylin-2.1</tag>
     </scm>
 
     <dependencyManagement>
