--- a/core-metadata/pom.xml
+++ b/core-metadata/pom.xml
@@ -62,6 +62,11 @@
             <scope>test</scope>
             <version>${project.parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
