KYLIN-1024 Load hive tables with selecting mode

--- a/conf/kylin.properties
+++ b/conf/kylin.properties
@@ -125,7 +125,8 @@ kylin.web.hadoop=
 kylin.web.diagnostic=
 #contact mail on web page ,optional
 kylin.web.contact_mail=
-
+#set the number of databases and tables of each database shown on the hive tree
+kylin.web.hive.limit=20
 ###########################config info for front#######################
 
 #env DEV|QA|PROD
