--- a/examples/test_case_data/sandbox/kylin.properties
+++ b/examples/test_case_data/sandbox/kylin.properties
@@ -120,6 +120,9 @@ kylin.web.diagnostic=
 #contact mail on web page ,optional
 kylin.web.contact_mail=
 
+#set the number of databases and tables of each database shown on the hive tree
+kylin.web.hive.limit=20
+
 ###########################config info for front#######################
 
 #env DEV|QA|PROD
