--- a/odbc/Driver/driver.vcxproj.filters
+++ b/odbc/Driver/driver.vcxproj.filters
@@ -16,8 +16,6 @@
  See the License for the specific language governing permissions and
  limitations under the License.
 -->
-
-
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Source Files">
@@ -100,5 +98,10 @@
     <CustomBuild Include="driver.DEF">
       <Filter>Source Files</Filter>
     </CustomBuild>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="banner.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
