--- a/kylin-it/pom.xml
+++ b/kylin-it/pom.xml
@@ -18,13 +18,11 @@
 -->
 
 
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>kylin</artifactId>
         <groupId>org.apache.kylin</groupId>
-        <version>2.0-SNAPSHOT</version>
+        <version>2.0-alpha</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -33,8 +31,8 @@
 
 
     <properties>
-        <hdp.version/>
-        <fastBuildMode/>
+        <hdp.version />
+        <fastBuildMode />
     </properties>
 
     <!-- Dependencies. -->
@@ -304,7 +302,7 @@
                                         <argument>-Dhdp.version=${hdp.version}</argument>
                                         <argument>-DfastBuildMode=${fastBuildMode}</argument>
                                         <argument>-classpath</argument>
-                                        <classpath/>
+                                        <classpath />
                                         <argument>org.apache.kylin.provision.BuildCubeWithEngine</argument>
                                     </arguments>
                                     <workingDirectory>${project.basedir}</workingDirectory>
@@ -324,7 +322,7 @@
                                         <argument>-Dhdp.version=${hdp.version}</argument>
                                         <argument>-DfastBuildMode=${fastBuildMode}</argument>
                                         <argument>-classpath</argument>
-                                        <classpath/>
+                                        <classpath />
                                         <argument>org.apache.kylin.provision.BuildCubeWithStream</argument>
                                     </arguments>
                                     <workingDirectory>${project.basedir}</workingDirectory>
@@ -344,7 +342,7 @@
                                         <argument>-Dhdp.version=${hdp.version}</argument>
                                         <argument>-DfastBuildMode=${fastBuildMode}</argument>
                                         <argument>-classpath</argument>
-                                        <classpath/>
+                                        <classpath />
                                         <argument>org.apache.kylin.provision.BuildIIWithStream</argument>
                                     </arguments>
                                     <workingDirectory>${project.basedir}</workingDirectory>
