KYLIN-1323 Improve performance of converting data to hfile

--- a/conf/kylin.properties
+++ b/conf/kylin.properties
@@ -83,6 +83,10 @@ kylin.hbase.region.cut.large=100
 kylin.hbase.region.count.min=1
 kylin.hbase.region.count.max=500
 
+# The hfile size of GB, smaller hfile leading to the converting hfile MR has more reducers and be faster
+# set to 0 or comment this config to disable this optimization
+kylin.hbase.hfile.size.gb=0
+
 # Enable/disable ACL check for cube query
 kylin.query.security.enabled=true
 
