KYLIN-1054 Support Hive client Beeline

--- a/conf/kylin.properties
+++ b/conf/kylin.properties
@@ -70,6 +70,10 @@ kylin.job.status.with.kerberos=false
 # Hive database name for putting the intermediate flat tables
 kylin.job.hive.database.for.intermediatetable=default
 
+# Hive client modes: cli or beeline, cli by default
+kylin.hive.client=
+kylin.hive.beeline.params=
+
 #default compression codec for htable,snappy,lzo,gzip,lz4
 kylin.hbase.default.compression.codec=snappy
 
