KYLIN-1054 Fix some test issues

--- a/examples/test_case_data/sandbox/kylin.properties
+++ b/examples/test_case_data/sandbox/kylin.properties
@@ -60,8 +60,7 @@ kylin.job.yarn.app.rest.check.interval.seconds=10
 kylin.job.hive.database.for.intermediatetable=default
 
 # Hive client modes: cli or beeline, cli by default
-kylin.hive.client=
-kylin.hive.beeline.params=-u 'jdbc:hive2://localhost:10000'
+kylin.hive.beeline.params=--hiveconf hive.security.authorization.sqlstd.confwhitelist.append='mapreduce.job.*|dfs.*' -u 'jdbc:hive2://localhost:10000'
 
 #default compression codec for htable,snappy,lzo,gzip,lz4
 kylin.hbase.default.compression.codec=gzip
