KYLIN-1323 give “kylin.hbase.hfile.size.gb” a default value

--- a/conf/kylin.properties
+++ b/conf/kylin.properties
@@ -84,8 +84,8 @@ kylin.hbase.region.count.min=1
 kylin.hbase.region.count.max=500
 
 # The hfile size of GB, smaller hfile leading to the converting hfile MR has more reducers and be faster
-# set to 0 or comment this config to disable this optimization
-kylin.hbase.hfile.size.gb=0
+# set to 0 or comment this config to disable this optimization;
+kylin.hbase.hfile.size.gb=5
 
 # Enable/disable ACL check for cube query
 kylin.query.security.enabled=true
