KYLIN-1054 Update beeline params in testcases

--- a/examples/test_case_data/sandbox/kylin.properties
+++ b/examples/test_case_data/sandbox/kylin.properties
@@ -21,7 +21,7 @@ kylin.storage.url=hbase
 kylin.hdfs.working.dir=/kylin
 
 # Parameters for beeline client
-kylin.hive.beeline.params=--hiveconf hive.security.authorization.sqlstd.confwhitelist.append='mapreduce.job.*|dfs.*' -u 'jdbc:hive2://localhost:10000'
+kylin.hive.beeline.params=-n root --hiveconf hive.security.authorization.sqlstd.confwhitelist.append='mapreduce.job.*|dfs.*' -u 'jdbc:hive2://localhost:10000'
 
 kylin.job.mapreduce.default.reduce.input.mb=500
 
