--- a/atopcalcite/pom.xml
+++ b/atopcalcite/pom.xml
@@ -41,6 +41,12 @@
         <dependency>
             <groupId>org.apache.calcite</groupId>
             <artifactId>calcite-avatica</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.protobuf</groupId>
+                    <artifactId>protobuf-java</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
