--- a/jdbc/pom.xml
+++ b/jdbc/pom.xml
@@ -44,6 +44,12 @@
         <dependency>
             <groupId>org.apache.calcite</groupId>
             <artifactId>calcite-avatica</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.protobuf</groupId>
+                    <artifactId>protobuf-java</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>commons-httpclient</groupId>
