--- a/pom.xml
+++ b/pom.xml
@@ -670,7 +670,7 @@
                                     <value>false</value>
                                 </property>
                             </systemProperties>
-                            <argLine>-Xmx4G -XX:MaxPermSize=512M</argLine>
+                            <argLine>-Xms1G -Xmx2G -XX:MaxPermSize=512M</argLine>
                         </configuration>
                     </plugin>
 
