KYLIN-1546 Move to tool module

--- a/pom.xml
+++ b/pom.xml
@@ -629,6 +629,7 @@
         <module>jdbc</module>
         <module>invertedindex</module>
         <module>assembly</module>
+        <module>tool</module>
         <module>kylin-it</module>
     </modules>
 
