Add Chinese version documents for v1.5

--- a/website/_config.yml
+++ b/website/_config.yml
@@ -59,6 +59,8 @@ collections:
   docs15:
     output: true
   docs-cn:
+    output: true
+  docs15-cn:
     output: true    
   dev:
     output: true  
