--- a/webapp/bower.json
+++ b/webapp/bower.json
@@ -33,7 +33,8 @@
     "angular-toggle-switch":"1.3.0",
     "angular-ui-select": "0.13.2",
     "angular-sanitize": "1.2.18",
-    "angular-tree-control": "0.2.8"
+    "angular-tree-control": "0.2.8",
+    "angular-bootstrap-datetimepicker": "0.3.15"
   },
   "devDependencies": {
     "less.js": "~1.4.0",
