added community best pratices

--- a/website/_data/docs15.yml
+++ b/website/_data/docs15.yml
@@ -21,6 +21,7 @@
   - release_notes
   - gettingstarted/faq
   - gettingstarted/events
+  - gettingstarted/best_practices
   - gettingstarted/terminology
   - gettingstarted/concepts
 
