minor, update branch info for review board

--- a/.reviewboardrc
+++ b/.reviewboardrc
@@ -16,5 +16,5 @@
 
 REVIEWBOARD_URL = "https://reviews.apache.org"
 REPOSITORY = "kylin"
-BRANCH = "2.x-staging"
-LAND_DEST_BRANCH = "2.x-staging"
+BRANCH = "master"
+LAND_DEST_BRANCH = "master"
