--- a/examples/test_case_data/localmeta/kylin.properties
+++ b/examples/test_case_data/localmeta/kylin.properties
@@ -15,6 +15,18 @@
 # limitations under the License.
 #
 
+# job engines
+kylin.job.engine.0=org.apache.kylin.engine.mr.MRBatchCubingEngine
+kylin.job.engine.2=org.apache.kylin.engine.mr.MRBatchCubingEngine2
+
+# source engines
+kylin.source.engine.0=org.apache.kylin.source.hive.HiveSource
+
+# storage engines
+kylin.storage.engine.0=org.apache.kylin.storage.hbase.HBaseStorage
+kylin.storage.engine.1=org.apache.kylin.storage.hybrid.HybridStorage
+kylin.storage.engine.2=org.apache.kylin.storage.hbase.HBaseStorage
+
 # optional information for the owner of kylin platform, it can be your team's email
 # currently it will be attached to each kylin's htable attribute
 kylin.owner=whoami@kylin.apache.org
