--- a/examples/test_case_data/sandbox/kylin.properties
+++ b/examples/test_case_data/sandbox/kylin.properties
@@ -74,6 +74,7 @@ kylin.hbase.region.cut=5
 # set 0 to disable this optimization
 kylin.hbase.hfile.size.gb=2
 
+kylin.query.udf.massin=org.apache.kylin.query.udf.MassInUDF
 
 # Time interval to check hadoop job status
 kylin.job.yarn.app.rest.check.interval.seconds=10
