KYLIN-1717 remove default implementations from kylin.properties

--- a/examples/test_case_data/sandbox/kylin.properties
+++ b/examples/test_case_data/sandbox/kylin.properties
@@ -15,21 +15,6 @@
 # limitations under the License.
 #
 
-# job engines
-kylin.job.engine.0=org.apache.kylin.engine.mr.MRBatchCubingEngine
-kylin.job.engine.2=org.apache.kylin.engine.mr.MRBatchCubingEngine2
-
-# source engines
-kylin.source.engine.0=org.apache.kylin.source.hive.HiveSource
-
-# storage engines
-kylin.storage.engine.0=org.apache.kylin.storage.hbase.HBaseStorage
-kylin.storage.engine.1=org.apache.kylin.storage.hybrid.HybridStorage
-kylin.storage.engine.2=org.apache.kylin.storage.hbase.HBaseStorage
-
-# schedulers
-kylin.scheduler.0=org.apache.kylin.job.impl.threadpool.DefaultScheduler
-
 # kylin server's mode
 kylin.server.mode=all
 # optional information for the owner of kylin platform, it can be your team's email
@@ -59,7 +44,7 @@ kylin.job.mapreduce.default.reduce.input.mb=500
 
 # If true, job engine will not assume that hadoop CLI reside on the same server as it self
 # you will have to specify kylin.job.remote.cli.hostname, kylin.job.remote.cli.username and kylin.job.remote.cli.password
-kylin.job.run.as.remote.cmd=false
+kylin.job.run.as.remote.cmd=true
 
 # Only necessary when kylin.job.run.as.remote.cmd=true
 kylin.job.remote.cli.hostname=sandbox
